syntax = "proto3";

package chief_of_state.local;

import "chief_of_state/local/persistence.proto";
import "chief_of_state/v1/common.proto";
import "google/protobuf/any.proto";
import "google/rpc/status.proto";

option go_package = "chief_of_state/local;localpb";

// THESE ARE INTERNAL MESSAGES FOR THE COS SERVICE

enum EntityMessageType {
  GET_STATE = 0;
  PUT_COMMAND = 1;
}

message EntityMessage {
  string entity_id = 1;
  EntityMessageType message_type = 2;
  google.protobuf.Any put_command = 3;
}

// DoMigration used by the Migration Actor to kick-start the migration
message StartMigration {}

// MigrationDone used as a reply message by the Migration Actor when the migration
// is successful
message MigrationSucceeded {}

// MigrationFailed is used as reply message by the Migration Actor when the migration has failed.
message MigrationFailed {
  // the failure error message
  string error_message = 1;
}
